src/yini_test/cases/golden/strict/valid/comments/block-comment-between-members.strict.yini
@yini strict

^ Application
name = "strict-block-comment-between-members"
/*
 * This block comment sits between active members.
 */
enabled = true

/END
