src/yini_test/cases/golden/strict/invalid/comments/block-comment-unterminated.strict.yini
@yini strict

^ Application
name = "strict-block-comment-unterminated"
/* This block comment never closes.

/END
